parser/debug/parser.output
Terminals unused in grammar

    TLBRACK
    TRBRACK
    TDOT


State 63 conflicts: 12 shift/reduce
State 68 conflicts: 12 shift/reduce
State 71 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl TSCOLON
    5     | func_decl
    6     | expr TSCOLON
    7     | if_stmt
    8     | for_stmt
    9     | while_stmt
   10     | ret_stmt TSCOLON
   11     | break_stmt TSCOLON
   12     | continue_stmt TSCOLON

   13 if_stmt: TIF expr TCOLON block
   14        | TIF expr TCOLON block TELSE TCOLON block

   15 iterator: TRANGE TLPAREN expr TRPAREN
   16         | TRANGE TLPAREN expr TCOMMA expr TRPAREN
   17         | TRANGE TLPAREN expr TCOMMA expr TCOMMA expr TRPAREN
   18         | TLLBRACK expr TCOMMA expr TRRBRACK

   19 for_stmt: TFOR var_decl TIN iterator TCOLON block

   20 while_stmt: TWHILE expr TCOLON block

   21 break_stmt: TBREAK

   22 continue_stmt: TCONTINUE

   23 ret_stmt: TRET
   24         | TRET expr

   25 block: TLBRACE stmts TRBRACE
   26      | TLBRACE TRBRACE
   27      | stmt

   28 type: ident
   29     | type TRARROW ident

   30 var_decl: ident TCOLON type
   31         | ident TCOLON type TEQUAL expr

   32 func_decl: TFN ident TLPAREN func_decl_args TRPAREN TCOLON ident block

   33 func_decl_args: ε
   34               | var_decl
   35               | func_decl_args TCOMMA var_decl

   36 ident: TIDENTIFIER

   37 cst_string: TCSTSTRING

   38 cst_int: TINTEGER

   39 expr: ident TEQUAL expr
   40     | ident TLPAREN call_args TRPAREN
   41     | ident
   42     | cst_int
   43     | cst_string
   44     | expr binop expr
   45     | TLPAREN expr TRPAREN

   46 call_args: ε
   47          | expr
   48          | call_args TCOMMA expr

   49 binop: TCEQ
   50      | TCNE
   51      | TCLT
   52      | TCLE
   53      | TCGT
   54      | TCGE
   55      | TPLUS
   56      | TMINUS
   57      | TMUL
   58      | TDIV
   59      | TMOD
   60      | TPOW


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TIDENTIFIER <string> (258) 36
    TINTEGER <string> (259) 38
    TCSTSTRING <string> (260) 37
    TCEQ <token> (261) 49
    TCNE <token> (262) 50
    TCLT <token> (263) 51
    TCLE <token> (264) 52
    TCGT <token> (265) 53
    TCGE <token> (266) 54
    TEQUAL <token> (267) 31 39
    TLPAREN <token> (268) 15 16 17 32 40 45
    TRPAREN <token> (269) 15 16 17 32 40 45
    TLBRACE <token> (270) 25 26
    TRBRACE <token> (271) 25 26
    TLBRACK <token> (272)
    TRBRACK <token> (273)
    TLLBRACK <token> (274) 18
    TRRBRACK <token> (275) 18
    TCOMMA <token> (276) 16 17 18 35 48
    TDOT <token> (277)
    TCOLON <token> (278) 13 14 19 20 30 31 32
    TSCOLON <token> (279) 4 6 10 11 12
    TPLUS <token> (280) 55
    TMINUS <token> (281) 56
    TMUL <token> (282) 57
    TDIV <token> (283) 58
    TMOD <token> (284) 59
    TPOW <token> (285) 60
    TIF <token> (286) 13 14
    TELSE <token> (287) 14
    TFN <token> (288) 32
    TWHILE <token> (289) 20
    TFOR <token> (290) 19
    TIN <token> (291) 19
    TRET <token> (292) 23 24
    TBREAK <token> (293) 21
    TCONTINUE <token> (294) 22
    TRANGE <token> (295) 15 16 17
    TRARROW <token> (296) 29


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program <block> (43)
        on left: 1
        on right: 0
    stmts <block> (44)
        on left: 2 3
        on right: 1 3 25
    stmt <stmt> (45)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 2 3 27
    if_stmt <stmt> (46)
        on left: 13 14
        on right: 7
    iterator <iter> (47)
        on left: 15 16 17 18
        on right: 19
    for_stmt <stmt> (48)
        on left: 19
        on right: 8
    while_stmt <stmt> (49)
        on left: 20
        on right: 9
    break_stmt <stmt> (50)
        on left: 21
        on right: 11
    continue_stmt <stmt> (51)
        on left: 22
        on right: 12
    ret_stmt <stmt> (52)
        on left: 23 24
        on right: 10
    block <block> (53)
        on left: 25 26 27
        on right: 13 14 19 20 32
    type <exprvec> (54)
        on left: 28 29
        on right: 29 30 31
    var_decl <var_decl> (55)
        on left: 30 31
        on right: 4 19 34 35
    func_decl <stmt> (56)
        on left: 32
        on right: 5
    func_decl_args <varvec> (57)
        on left: 33 34 35
        on right: 32 35
    ident <ident> (58)
        on left: 36
        on right: 28 29 30 31 32 39 40 41
    cst_string <expr> (59)
        on left: 37
        on right: 43
    cst_int <expr> (60)
        on left: 38
        on right: 42
    expr <expr> (61)
        on left: 39 40 41 42 43 44 45
        on right: 6 13 14 15 16 17 18 20 24 31 39 44 45 47 48
    call_args <exprvec> (62)
        on left: 46 47 48
        on right: 40 48
    binop <token> (63)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 44


State 0

    0 $accept: • program $end

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    program        go to state 12
    stmts          go to state 13
    stmt           go to state 14
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 1

   36 ident: TIDENTIFIER •

    $default  reduce using rule 36 (ident)


State 2

   38 cst_int: TINTEGER •

    $default  reduce using rule 38 (cst_int)


State 3

   37 cst_string: TCSTSTRING •

    $default  reduce using rule 37 (cst_string)


State 4

   45 expr: TLPAREN • expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 28


State 5

   13 if_stmt: TIF • expr TCOLON block
   14        | TIF • expr TCOLON block TELSE TCOLON block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 29


State 6

   32 func_decl: TFN • ident TLPAREN func_decl_args TRPAREN TCOLON ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 30


State 7

   20 while_stmt: TWHILE • expr TCOLON block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 31


State 8

   19 for_stmt: TFOR • var_decl TIN iterator TCOLON block

    TIDENTIFIER  shift, and go to state 1

    var_decl  go to state 32
    ident     go to state 33


State 9

   23 ret_stmt: TRET •
   24         | TRET • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    $default  reduce using rule 23 (ret_stmt)

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 34


State 10

   21 break_stmt: TBREAK •

    $default  reduce using rule 21 (break_stmt)


State 11

   22 continue_stmt: TCONTINUE •

    $default  reduce using rule 22 (continue_stmt)


State 12

    0 $accept: program • $end

    $end  shift, and go to state 35


State 13

    1 program: stmts •
    3 stmts: stmts • stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    $default  reduce using rule 1 (program)

    stmt           go to state 36
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 14

    2 stmts: stmt •

    $default  reduce using rule 2 (stmts)


State 15

    7 stmt: if_stmt •

    $default  reduce using rule 7 (stmt)


State 16

    8 stmt: for_stmt •

    $default  reduce using rule 8 (stmt)


State 17

    9 stmt: while_stmt •

    $default  reduce using rule 9 (stmt)


State 18

   11 stmt: break_stmt • TSCOLON

    TSCOLON  shift, and go to state 37


State 19

   12 stmt: continue_stmt • TSCOLON

    TSCOLON  shift, and go to state 38


State 20

   10 stmt: ret_stmt • TSCOLON

    TSCOLON  shift, and go to state 39


State 21

    4 stmt: var_decl • TSCOLON

    TSCOLON  shift, and go to state 40


State 22

    5 stmt: func_decl •

    $default  reduce using rule 5 (stmt)


State 23

   30 var_decl: ident • TCOLON type
   31         | ident • TCOLON type TEQUAL expr
   39 expr: ident • TEQUAL expr
   40     | ident • TLPAREN call_args TRPAREN
   41     | ident •

    TEQUAL   shift, and go to state 41
    TLPAREN  shift, and go to state 42
    TCOLON   shift, and go to state 43

    $default  reduce using rule 41 (expr)


State 24

   43 expr: cst_string •

    $default  reduce using rule 43 (expr)


State 25

   42 expr: cst_int •

    $default  reduce using rule 42 (expr)


State 26

    6 stmt: expr • TSCOLON
   44 expr: expr • binop expr

    TCEQ     shift, and go to state 44
    TCNE     shift, and go to state 45
    TCLT     shift, and go to state 46
    TCLE     shift, and go to state 47
    TCGT     shift, and go to state 48
    TCGE     shift, and go to state 49
    TSCOLON  shift, and go to state 50
    TPLUS    shift, and go to state 51
    TMINUS   shift, and go to state 52
    TMUL     shift, and go to state 53
    TDIV     shift, and go to state 54
    TMOD     shift, and go to state 55
    TPOW     shift, and go to state 56

    binop  go to state 57


State 27

   39 expr: ident • TEQUAL expr
   40     | ident • TLPAREN call_args TRPAREN
   41     | ident •

    TEQUAL   shift, and go to state 41
    TLPAREN  shift, and go to state 42

    $default  reduce using rule 41 (expr)


State 28

   44 expr: expr • binop expr
   45     | TLPAREN expr • TRPAREN

    TCEQ     shift, and go to state 44
    TCNE     shift, and go to state 45
    TCLT     shift, and go to state 46
    TCLE     shift, and go to state 47
    TCGT     shift, and go to state 48
    TCGE     shift, and go to state 49
    TRPAREN  shift, and go to state 58
    TPLUS    shift, and go to state 51
    TMINUS   shift, and go to state 52
    TMUL     shift, and go to state 53
    TDIV     shift, and go to state 54
    TMOD     shift, and go to state 55
    TPOW     shift, and go to state 56

    binop  go to state 57


State 29

   13 if_stmt: TIF expr • TCOLON block
   14        | TIF expr • TCOLON block TELSE TCOLON block
   44 expr: expr • binop expr

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TCOLON  shift, and go to state 59
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    binop  go to state 57


State 30

   32 func_decl: TFN ident • TLPAREN func_decl_args TRPAREN TCOLON ident block

    TLPAREN  shift, and go to state 60


State 31

   20 while_stmt: TWHILE expr • TCOLON block
   44 expr: expr • binop expr

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TCOLON  shift, and go to state 61
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    binop  go to state 57


State 32

   19 for_stmt: TFOR var_decl • TIN iterator TCOLON block

    TIN  shift, and go to state 62


State 33

   30 var_decl: ident • TCOLON type
   31         | ident • TCOLON type TEQUAL expr

    TCOLON  shift, and go to state 43


State 34

   24 ret_stmt: TRET expr •
   44 expr: expr • binop expr

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    $default  reduce using rule 24 (ret_stmt)

    binop  go to state 57


State 35

    0 $accept: program $end •

    $default  accept


State 36

    3 stmts: stmts stmt •

    $default  reduce using rule 3 (stmts)


State 37

   11 stmt: break_stmt TSCOLON •

    $default  reduce using rule 11 (stmt)


State 38

   12 stmt: continue_stmt TSCOLON •

    $default  reduce using rule 12 (stmt)


State 39

   10 stmt: ret_stmt TSCOLON •

    $default  reduce using rule 10 (stmt)


State 40

    4 stmt: var_decl TSCOLON •

    $default  reduce using rule 4 (stmt)


State 41

   39 expr: ident TEQUAL • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 63


State 42

   40 expr: ident TLPAREN • call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    $default  reduce using rule 46 (call_args)

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 64
    call_args   go to state 65


State 43

   30 var_decl: ident TCOLON • type
   31         | ident TCOLON • type TEQUAL expr

    TIDENTIFIER  shift, and go to state 1

    type   go to state 66
    ident  go to state 67


State 44

   49 binop: TCEQ •

    $default  reduce using rule 49 (binop)


State 45

   50 binop: TCNE •

    $default  reduce using rule 50 (binop)


State 46

   51 binop: TCLT •

    $default  reduce using rule 51 (binop)


State 47

   52 binop: TCLE •

    $default  reduce using rule 52 (binop)


State 48

   53 binop: TCGT •

    $default  reduce using rule 53 (binop)


State 49

   54 binop: TCGE •

    $default  reduce using rule 54 (binop)


State 50

    6 stmt: expr TSCOLON •

    $default  reduce using rule 6 (stmt)


State 51

   55 binop: TPLUS •

    $default  reduce using rule 55 (binop)


State 52

   56 binop: TMINUS •

    $default  reduce using rule 56 (binop)


State 53

   57 binop: TMUL •

    $default  reduce using rule 57 (binop)


State 54

   58 binop: TDIV •

    $default  reduce using rule 58 (binop)


State 55

   59 binop: TMOD •

    $default  reduce using rule 59 (binop)


State 56

   60 binop: TPOW •

    $default  reduce using rule 60 (binop)


State 57

   44 expr: expr binop • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 68


State 58

   45 expr: TLPAREN expr TRPAREN •

    $default  reduce using rule 45 (expr)


State 59

   13 if_stmt: TIF expr TCOLON • block
   14        | TIF expr TCOLON • block TELSE TCOLON block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TLBRACE      shift, and go to state 69
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    stmt           go to state 70
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    block          go to state 71
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 60

   32 func_decl: TFN ident TLPAREN • func_decl_args TRPAREN TCOLON ident block

    TIDENTIFIER  shift, and go to state 1

    $default  reduce using rule 33 (func_decl_args)

    var_decl        go to state 72
    func_decl_args  go to state 73
    ident           go to state 33


State 61

   20 while_stmt: TWHILE expr TCOLON • block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TLBRACE      shift, and go to state 69
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    stmt           go to state 70
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    block          go to state 74
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 62

   19 for_stmt: TFOR var_decl TIN • iterator TCOLON block

    TLLBRACK  shift, and go to state 75
    TRANGE    shift, and go to state 76

    iterator  go to state 77


State 63

   39 expr: ident TEQUAL expr •
   44     | expr • binop expr

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    TCEQ      [reduce using rule 39 (expr)]
    TCNE      [reduce using rule 39 (expr)]
    TCLT      [reduce using rule 39 (expr)]
    TCLE      [reduce using rule 39 (expr)]
    TCGT      [reduce using rule 39 (expr)]
    TCGE      [reduce using rule 39 (expr)]
    TPLUS     [reduce using rule 39 (expr)]
    TMINUS    [reduce using rule 39 (expr)]
    TMUL      [reduce using rule 39 (expr)]
    TDIV      [reduce using rule 39 (expr)]
    TMOD      [reduce using rule 39 (expr)]
    TPOW      [reduce using rule 39 (expr)]
    $default  reduce using rule 39 (expr)

    binop  go to state 57


State 64

   44 expr: expr • binop expr
   47 call_args: expr •

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    $default  reduce using rule 47 (call_args)

    binop  go to state 57


State 65

   40 expr: ident TLPAREN call_args • TRPAREN
   48 call_args: call_args • TCOMMA expr

    TRPAREN  shift, and go to state 78
    TCOMMA   shift, and go to state 79


State 66

   29 type: type • TRARROW ident
   30 var_decl: ident TCOLON type •
   31         | ident TCOLON type • TEQUAL expr

    TEQUAL   shift, and go to state 80
    TRARROW  shift, and go to state 81

    $default  reduce using rule 30 (var_decl)


State 67

   28 type: ident •

    $default  reduce using rule 28 (type)


State 68

   44 expr: expr • binop expr
   44     | expr binop expr •

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    TCEQ      [reduce using rule 44 (expr)]
    TCNE      [reduce using rule 44 (expr)]
    TCLT      [reduce using rule 44 (expr)]
    TCLE      [reduce using rule 44 (expr)]
    TCGT      [reduce using rule 44 (expr)]
    TCGE      [reduce using rule 44 (expr)]
    TPLUS     [reduce using rule 44 (expr)]
    TMINUS    [reduce using rule 44 (expr)]
    TMUL      [reduce using rule 44 (expr)]
    TDIV      [reduce using rule 44 (expr)]
    TMOD      [reduce using rule 44 (expr)]
    TPOW      [reduce using rule 44 (expr)]
    $default  reduce using rule 44 (expr)

    binop  go to state 57


State 69

   25 block: TLBRACE • stmts TRBRACE
   26      | TLBRACE • TRBRACE

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TRBRACE      shift, and go to state 82
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    stmts          go to state 83
    stmt           go to state 14
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 70

   27 block: stmt •

    $default  reduce using rule 27 (block)


State 71

   13 if_stmt: TIF expr TCOLON block •
   14        | TIF expr TCOLON block • TELSE TCOLON block

    TELSE  shift, and go to state 84

    TELSE     [reduce using rule 13 (if_stmt)]
    $default  reduce using rule 13 (if_stmt)


State 72

   34 func_decl_args: var_decl •

    $default  reduce using rule 34 (func_decl_args)


State 73

   32 func_decl: TFN ident TLPAREN func_decl_args • TRPAREN TCOLON ident block
   35 func_decl_args: func_decl_args • TCOMMA var_decl

    TRPAREN  shift, and go to state 85
    TCOMMA   shift, and go to state 86


State 74

   20 while_stmt: TWHILE expr TCOLON block •

    $default  reduce using rule 20 (while_stmt)


State 75

   18 iterator: TLLBRACK • expr TCOMMA expr TRRBRACK

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 87


State 76

   15 iterator: TRANGE • TLPAREN expr TRPAREN
   16         | TRANGE • TLPAREN expr TCOMMA expr TRPAREN
   17         | TRANGE • TLPAREN expr TCOMMA expr TCOMMA expr TRPAREN

    TLPAREN  shift, and go to state 88


State 77

   19 for_stmt: TFOR var_decl TIN iterator • TCOLON block

    TCOLON  shift, and go to state 89


State 78

   40 expr: ident TLPAREN call_args TRPAREN •

    $default  reduce using rule 40 (expr)


State 79

   48 call_args: call_args TCOMMA • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 90


State 80

   31 var_decl: ident TCOLON type TEQUAL • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 91


State 81

   29 type: type TRARROW • ident

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 92


State 82

   26 block: TLBRACE TRBRACE •

    $default  reduce using rule 26 (block)


State 83

    3 stmts: stmts • stmt
   25 block: TLBRACE stmts • TRBRACE

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TRBRACE      shift, and go to state 93
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    stmt           go to state 36
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 84

   14 if_stmt: TIF expr TCOLON block TELSE • TCOLON block

    TCOLON  shift, and go to state 94


State 85

   32 func_decl: TFN ident TLPAREN func_decl_args TRPAREN • TCOLON ident block

    TCOLON  shift, and go to state 95


State 86

   35 func_decl_args: func_decl_args TCOMMA • var_decl

    TIDENTIFIER  shift, and go to state 1

    var_decl  go to state 96
    ident     go to state 33


State 87

   18 iterator: TLLBRACK expr • TCOMMA expr TRRBRACK
   44 expr: expr • binop expr

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TCOMMA  shift, and go to state 97
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    binop  go to state 57


State 88

   15 iterator: TRANGE TLPAREN • expr TRPAREN
   16         | TRANGE TLPAREN • expr TCOMMA expr TRPAREN
   17         | TRANGE TLPAREN • expr TCOMMA expr TCOMMA expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 98


State 89

   19 for_stmt: TFOR var_decl TIN iterator TCOLON • block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TLBRACE      shift, and go to state 69
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    stmt           go to state 70
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    block          go to state 99
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 90

   44 expr: expr • binop expr
   48 call_args: call_args TCOMMA expr •

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    $default  reduce using rule 48 (call_args)

    binop  go to state 57


State 91

   31 var_decl: ident TCOLON type TEQUAL expr •
   44 expr: expr • binop expr

    TCEQ    shift, and go to state 44
    TCNE    shift, and go to state 45
    TCLT    shift, and go to state 46
    TCLE    shift, and go to state 47
    TCGT    shift, and go to state 48
    TCGE    shift, and go to state 49
    TPLUS   shift, and go to state 51
    TMINUS  shift, and go to state 52
    TMUL    shift, and go to state 53
    TDIV    shift, and go to state 54
    TMOD    shift, and go to state 55
    TPOW    shift, and go to state 56

    $default  reduce using rule 31 (var_decl)

    binop  go to state 57


State 92

   29 type: type TRARROW ident •

    $default  reduce using rule 29 (type)


State 93

   25 block: TLBRACE stmts TRBRACE •

    $default  reduce using rule 25 (block)


State 94

   14 if_stmt: TIF expr TCOLON block TELSE TCOLON • block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TLBRACE      shift, and go to state 69
    TIF          shift, and go to state 5
    TFN          shift, and go to state 6
    TWHILE       shift, and go to state 7
    TFOR         shift, and go to state 8
    TRET         shift, and go to state 9
    TBREAK       shift, and go to state 10
    TCONTINUE    shift, and go to state 11

    stmt           go to state 70
    if_stmt        go to state 15
    for_stmt       go to state 16
    while_stmt     go to state 17
    break_stmt     go to state 18
    continue_stmt  go to state 19
    ret_stmt       go to state 20
    block          go to state 100
    var_decl       go to state 21
    func_decl      go to state 22
    ident          go to state 23
    cst_string     go to state 24
    cst_int        go to state 25
    expr           go to state 26


State 95

   32 func_decl: TFN ident TLPAREN func_decl_args TRPAREN TCOLON • ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 101


State 96

   35 func_decl_args: func_decl_args TCOMMA var_decl •

    $default  reduce using rule 35 (func_decl_args)


State 97

   18 iterator: TLLBRACK expr TCOMMA • expr TRRBRACK

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident       go to state 27
    cst_string  go to state 24
    cst_int     go to state 25
    expr        go to state 102


State 98
